--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
     <div class="article-title-wrapper">
         <h2 class="article-title">
-            <a href="/post/readme/">leetcode 第 292 场周赛 题解</a>
+            <a href="/post/%E7%AE%97%E6%B3%95/">leetcode 第 292 场周赛 题解</a>
         </h2>
     
         
