--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
     <div class="article-title-wrapper">
         <h2 class="article-title">
-            <a href="/post/vue-%E5%BC%80%E5%8F%91%E7%BB%8F%E9%AA%8C%E6%80%BB%E7%BB%93/">Hugo&#43;GitHub快速搭建博客</a>
+            <a href="/post/vue-%E5%BC%80%E5%8F%91%E7%BB%8F%E9%AA%8C%E6%80%BB%E7%BB%93/">Vue 开发经验总结</a>
         </h2>
     
         
