--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
     <div class="article-title-wrapper">
         <h2 class="article-title">
-            <a href="/post/789/">Vue 开发经验总结</a>
+            <a href="/post/789/">Codeforces Round #789 (Div. 2)</a>
         </h2>
     
         
